# R.O.C-SERVER

./: .config  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  Server
INC/Encoder/: x264Encoder.hpp
INC/Interpretor/: Reader.hpp
INC/Logger/: Logger.hpp  Logs.hpp
INC/Manager/: Manager.hpp  VideoManager.hpp
INC/Network/: H264LiveServerMediaSession.hpp  LiveSourceWithx264.hpp  Server.hpp  TcpPacket.hpp  TcpServer.hpp  UdpPacket.hpp  UdpServer.hpp
INC/Parser/: ConfigParser.hpp  YAMLParser.hpp
INC/Processing/: Arrow.hpp  Canny.hpp  FaceDetect.hpp  ImgProcessing.hpp  ImgProcessingContainer.hpp  ImgProcessingParams.hpp  ImgProcessingWrapper.hpp
INC/RTSPFactory/: RTSPFactory.hpp
INC/Singletons/: ImgProcessingWrapperSingleton.hpp  VideoManagerSingleton.hpp
INC/Sync/: LockList.hpp  Semaphore.hpp  WaitList.hpp
INC/Video/: Camera.hpp  CameraV4L2.h
Protobuf/: Video.cs  proto.proto  video.proto
RTSP/: Makefile
RTSP/sources/: DeviceSource.cpp  testH264VideoStreamer.cpp
SRC/Encoder/: x264Encoder.cpp  x265Encoder.cpp
SRC/Interpretor/: Reader.cpp
SRC/Logger/: Logger.cpp
SRC/Main/: main.cpp
SRC/Manager/: Manager.cpp  VideoManager.cpp
SRC/Network/: H264LiveServerMediaSession.cpp  LiveSourceWithx264.cpp  Server.cpp  TcpServer.cpp  UdpServer.cpp  main.cpp
SRC/Parser/: ConfigParser.cpp  YAMLParser.cpp
SRC/Processing/: Arrow.cpp  Canny.cpp  FaceDetect.cpp  ImgProcessing.cpp  ImgProcessingParams.cpp  ImgProcessingWrapper.cpp  RedCirclesDetect.cpp
SRC/RTSPFactory/: RTSPFactory.cpp
SRC/Singletons/: ImgProcessingWrapperSingleton.cpp
SRC/Sync/: LockList.cpp  Semaphore.cpp  WaitList.cpp
SRC/Test/: CameraTest.cpp  EncoderTest.cpp  SingletonsTest.cpp  YamlTest.cpp  main.cpp
SRC/Video/: Camera.cpp  CameraV4L2.cpp  v4l2uvc.cpp
arm/: arm-linux-gnueabi-gcc.cmake  toolchain-arm-linux-gnueabihf.cmake
cmake/Modules/: Findlibx264.cmake  Findlibx265.cmake
config/: processing.yml  resolutions.yml
includes/Encoder/: x264Encoder.hpp  x265Encoder.hpp  x265Encoder.hpp.unstable
includes/Interpretor/: NetworkInterpretor.hpp  Reader.hpp
includes/Logger/: Logger.hpp  Logs.hpp  colors.hpp
includes/Manager/: Cleanup.hpp  Manager.hpp  VideoManager.hpp
includes/Network/: H264LiveServerMediaSession.hpp  LiveSourceWithx264.hpp  NetworkInterface.hpp  NetworkManager.hpp  Server.hpp  TcpPacket.hpp  TcpServer.hpp
includes/Parser/: ConfigParser.hpp  YAMLParser.hpp
includes/Processing/: Arrow.hpp  CannyEdge.hpp  EyeDetect.hpp  FaceDetect.hpp  FullBodyDetect.hpp  ImgProcessing.hpp  ImgProcessingWrapper.hpp  LowerBodyDetect.hpp  RedCirclesDetect.hpp  UpperBodyDetect.hpp
includes/RTSPFactory/: RTSPFactory.hpp
includes/RTSPManager/: RTSPManager.hpp
includes/Singletons/: ImgProcessingWrapperSingleton.hpp  VideoManagerSingleton.hpp
includes/Sync/: LockList.hpp  Semaphore.hpp
includes/Video/: Camera.hpp
sample/: Client  makefile
sample/SRC/: RTSP_player.cpp
sources/: CMakeLists.txt
sources/Encoder/: x264Encoder.cpp  x265Encoder.cpp  x265Encoder.cpp.unstable
sources/Interpretor/: NetworkInterpretor.cpp  Reader.cpp
sources/Logger/: Logger.cpp
sources/Main/: main.cpp
sources/Manager/: Cleanup.cpp  Manager.cpp  VideoManager.cpp
sources/Network/: H264LiveServerMediaSession.cpp  LiveSourceWithx264.cpp  NetworkInterface.cpp  NetworkManager.cpp  Server.cpp  TcpServer.cpp
sources/Parser/: ConfigParser.cpp  YAMLParser.cpp
sources/Processing/: Arrow.cpp  CannyEdge.cpp  EyeDetect.cpp  FaceDetect.cpp  FullBodyDetect.cpp  ImgProcessing.cpp  ImgProcessingWrapper.cpp  LowerBodyDetect.cpp  RedCirclesDetect.cpp  UpperBodyDetect.cpp
sources/Protobuf/: proto.proto
sources/RTSPFactory/: RTSPFactory.cpp
sources/RTSPManager/: RTSPManager.cpp
sources/Singletons/: ImgProcessingWrapperSingleton.cpp  VideoManagerSingleton.cpp
sources/Sync/: LockList.cpp  Semaphore.cpp
sources/Test/: main.cpp
sources/Video/: Camera.cpp
sources/includes/Encoder/: x264Encoder.hpp  x265Encoder.hpp.unstable
sources/includes/Logger/: Logs.hpp
sources/includes/Manager/: Cleanup.hpp  Manager.hpp
sources/includes/Network/: Server.hpp  TcpServer.hpp
sources/includes/Processing/: CannyEdge.hpp  FaceDetect.hpp  ImgProcessing.hpp  RedCirclesDetect.hpp
sources/includes/RTSPManager/: RTSPManager.hpp
sources/scripts/: exposure.sh
test/: LockList.cpp  Locker.cpp  Locker.hpp  WaitList.cpp  WaitList.hpp  a.out  test.cpp
